# unified-ai-orchestrator

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  SETUP_COMPLETE.md  TESTING.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.py
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
config/: default.toml
docs/: api.md  architecture.md  contributing.md  deployment.md  development.md  mobile-access.md
docs/adapters/: cursor.md
docs/examples/: basic_usage.py
python-glue/: pyproject.toml
python-glue/tests/: __init__.py  conftest.py  test_adapters.py  test_basic.py  test_context_manager.py  test_cost_tracker.py  test_indexer.py  test_resilience.py  test_router.py
python-glue/tests/e2e/: test_cli_flow.py  test_full_workflow.py
python-glue/tests/fixtures/: adapters.py  context.py  database.py  generators.py
python-glue/tests/integration/: test_api.py  test_api_complete.py  test_context_flow.py  test_migrations.py  test_router_integration.py  test_security.py
python-glue/unified_ai/: __init__.py  context_manager.py  router.py
python-glue/unified_ai/adapters/: __init__.py  base.py  claude.py  cursor.py  gemini.py  gpt.py  local.py  perplexity.py
python-glue/unified_ai/api/: __init__.py  auth_routes.py  csrf.py  logging_middleware.py  middleware.py  routes.py  server.py  websocket.py
python-glue/unified_ai/api/static/: app.js  manifest.json  mobile.html  styles.css  sw.js
python-glue/unified_ai/cache/: __init__.py  redis.py  session.py
python-glue/unified_ai/cli/: main.py
python-glue/unified_ai/config/: __init__.py  loader.py
python-glue/unified_ai/context/: __init__.py  advanced.py  token_counter.py
python-glue/unified_ai/core/: __init__.py  context.py  router.py
python-glue/unified_ai/cost/: __init__.py  reports.py  tracker.py
python-glue/unified_ai/indexer/: __init__.py  cli.py  manager.py
python-glue/unified_ai/migrations/: __init__.py  cli.py  migrations.py  postgres.py  sqlite.py
python-glue/unified_ai/observability/: __init__.py  logging.py  metrics.py  tracing.py
python-glue/unified_ai/resilience/: __init__.py  circuit_breaker.py  rate_limiter.py  retry.py
python-glue/unified_ai/security/: __init__.py  audit.py  auth.py  authorization.py  encryption.py  validation.py
python-glue/unified_ai/storage/: __init__.py  base.py  postgres.py  sqlite.py
python-glue/unified_ai/utils/: __init__.py  adapters.py  auth.py
rust-core/: Cargo.toml
rust-core/pyo3-bridge/: Cargo.toml
rust-core/pyo3-bridge/src/: context_bindings.rs  indexer_bindings.rs  lib.rs  migration_bindings.rs  router_bindings.rs
rust-core/src/: error.rs  lib.rs
rust-core/src/composer/: merge.rs  mod.rs
rust-core/src/context/: compression.rs  manager.rs  mod.rs  storage.rs  summarizer.rs  token_counter.rs  window.rs
rust-core/src/cost/: calculator.rs  mod.rs  pricing.rs  storage.rs
rust-core/src/indexer/: codebase.rs  mod.rs  parser.rs  search.rs  semantic.rs  storage.rs  watcher.rs
rust-core/src/migrations/: mod.rs  runner.rs
rust-core/src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
rust-core/src/resilience/: circuit_breaker.rs  mod.rs  rate_limiter.rs  retry.rs
rust-core/src/router/: analyzer.rs  mod.rs  selector.rs
rust-core/src/security/: mod.rs  validation.rs
rust-core/src/storage/: db.rs  kv.rs  mod.rs
rust-core/tests/: integration_test.rs  migrations_test.rs
scripts/: setup.sh
