[workspace]
members = ["rust-core", "rust-core/pyo3-bridge"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Magus"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"
# Error handling and resilience
tower = "0.4"
tower-http = "0.5"
# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = "0.21"
prometheus = "0.13"
# Indexing (will be used in Phase 2)
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
notify = "6.1"
tantivy = "0.20"
# Database migrations
sqlx-migrate = "0.1"
# Security
ring = "0.17"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"