[package]
name = "rust-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rust_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
reqwest.workspace = true
clap.workspace = true
async-trait.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
prometheus.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
notify.workspace = true
tantivy.workspace = true
sqlx-migrate.workspace = true
ring.workspace = true
chrono.workspace = true
ort.workspace = true

[features]
default = []
onnx-embeddings = ["ort"]